--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8095,7 +8095,7 @@ body {
   height: auto;
 }
 
-.card {
+.carousel-item .card {
   width: 500px;
 }
 
@@ -8103,6 +8103,10 @@ body {
   margin-top: -250px;
   margin-left: -150px;
   height: 750px;
+}
+
+.to_by_destination {
+  width: 100%;
 }
 
 footer {
