section comm + author

--- a/assets/CSS/custom.scss
+++ b/assets/CSS/custom.scss
@@ -20,6 +20,13 @@ body{
     width: 100%;
 }
 
+li.comm {
+    margin: 10px;
+    border: 1px solid black ;
+    padding: 20px;
+    border-radius: 3px;
+}
+
 footer{
     bottom: 0px;
     width: 100%;
