page allDestinations + POO fixed

--- a/assets/CSS/custom.scss
+++ b/assets/CSS/custom.scss
@@ -35,3 +35,12 @@ footer{
 .form-register {
     margin-top: 200px;
 }
+
+.test{
+    margin: 10px;
+}
+
+.centreListeTo{
+    display: flex;
+    justify-content: center;
+}
