--- a/assets/CSS/custom.scss
+++ b/assets/CSS/custom.scss
@@ -40,7 +40,13 @@ footer{
     margin: 10px;
 }
 
-.centreListeTo{
-    display: flex;
-    justify-content: center;
+.form-review{
+    border: 1px solid black;
+    padding: 20px;
+    background: rgba(229, 233, 235, 0.643);
+    box-shadow: 2x 2px 0px black;
+
+    ::placeholder{
+        color: black;
+    }
 }
