--- a/assets/CSS/custom.scss
+++ b/assets/CSS/custom.scss
@@ -10,10 +10,16 @@ body{
     }
 }
 
+.header-pcontainer{
+    position: relative;
+    z-index: 28;
+}
+
 .carousel{
     margin-top: -250px;
     margin-left: -150px;
     height: 750px;
+    z-index: 0;
 }
 
 .to_by_destination{
