--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8145,4 +8145,12 @@ footer {
   color: black;
 }
 
+.form-editTO {
+  margin-left: 5px;
+}
+
+.form-premium {
+  margin-top: 15px;
+}
+
 /*# sourceMappingURL=style.css.map */
